force-app/main/default/objects/Department__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <label>College</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>