force-app/main/default/objects/Department__c/fields/No_of_Subjects__c.field-meta.xml
<CustomField>
    <fullName>No_of_Subjects__c</fullName>
    <label>No of Subjects</label>
    <summaryForeignKey>Department_Subject_Junction__c.Department__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>