force-app/main/default/objects/Department__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>